--- a/css/bodegones.css
+++ b/css/bodegones.css
@@ -513,6 +513,7 @@ h1::after {
     width: 100%;
     padding: 20px;
     display: flex;
+    flex-direction: column;
     gap: 3px;
 
     .botonCarrito {
