--- a/css/bodegones.css
+++ b/css/bodegones.css
@@ -208,7 +208,7 @@ main {
 
         .resto {
             width: 100%;
-            flex: 0 0 160px;
+            flex: 0 0 220px;
             background-color: rgb(255, 255, 255);
             position: relative;
             box-shadow: 0 0 15px -3px rgba(0, 0, 0, 0.603);
@@ -241,7 +241,13 @@ main {
                 float: left;
                 height: 100%;
                 width: 45%;
-               
+
+                img {
+                    height: 100%;
+                    width: 100%;
+                    object-fit: cover;
+                }
+
 
             }
 
@@ -528,11 +534,12 @@ h1::after {
         transition: all 0.3s ease-in-out;
     }
 
-    button:hover{
+    button:hover {
         box-shadow: 0 2px 0 black;
         color: black;
         cursor: pointer;
     }
+
     .btnAgregar {
         border: 0;
         flex: 1;
@@ -547,7 +554,9 @@ h1::after {
     }
 }
 
-.flex{display: flex;}
+.flex {
+    display: flex;
+}
 
 @media screen and (orientation=landscape) {
 
